--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,40 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.springframework.security:spring-security-test'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//	implementation 'javax.persistence:persistence-api:2.2'
+
+	// SWAGGER ==============================
+	implementation 'io.springfox:springfox-swagger2:2.10.5'
+	implementation("io.springfox:springfox-swagger-ui:3.0.0")
+	implementation("io.springfox:springfox-data-rest:3.0.0")
+	implementation("io.springfox:springfox-bean-validators:3.0.0")
+	implementation("io.springfox:springfox-boot-starter:3.0.0")
+	// ============================== SWAGGER
+
+
+	// JPA
+	// 하이버네이트 추가
+	// Hibernate는 Java에서 가장 대중적인 ORM 프레임워크로,
+	// 객체와 데이터베이스 간의 매핑을 처리하고, SQL 쿼리를 자동으로 생성하여 데이터베이스를 조작한다
+	implementation 'org.hibernate:hibernate-core:5.5.7.Final'
+
+	// Querydsl 추가 시작
+	implementation 'com.querydsl:querydsl-jpa'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
 }
 
 tasks.named('test') {
