--- a/build.gradle
+++ b/build.gradle
@@ -20,27 +20,22 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.security:spring-security-test'
-
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	implementation 'org.springframework.boot:spring-boot-starter'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-//	implementation 'javax.persistence:persistence-api:2.2'
 
 	// SWAGGER ==============================
 	implementation 'io.springfox:springfox-swagger2:2.10.5'
 	implementation("io.springfox:springfox-swagger-ui:3.0.0")
-	implementation("io.springfox:springfox-data-rest:3.0.0")
-	implementation("io.springfox:springfox-bean-validators:3.0.0")
-	implementation("io.springfox:springfox-boot-starter:3.0.0")
-	// ============================== SWAGGER
 
+	// ============================== SWAGGER
 
 	// JPA
 	// 하이버네이트 추가
@@ -49,10 +44,10 @@ dependencies {
 	implementation 'org.hibernate:hibernate-core:5.5.7.Final'
 
 	// Querydsl 추가 시작
-	implementation 'com.querydsl:querydsl-jpa'
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+//	implementation 'com.querydsl:querydsl-jpa'
+//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+//	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 
 }
 
