--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dubu
     username: root
-    password: bb27655100
+    password: '0000'
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create  # 스키마 자동 생성
+      ddl-auto: update  # 스키마 자동 생성
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true      # SQL 쿼리 출력
     properties:
