--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dubu
-    username: root
+    username: user
     password: '0000'
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
