--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dubu
-    username: user
-    password: '0000'
+#    url: jdbc:mysql://{ec2 public IP}:3306/{DB 이름}
+    url: jdbc:mysql://13.125.252.182:3306/dubu?useSSL=false&allow
+    username: root
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update  # 스키마 자동 생성
+      ddl-auto:  update  # 스키마 자동 생성
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true      # SQL 쿼리 출력
     properties:
