--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework.boot:spring-boot-starter'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
+//	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.0'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
