--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter'
 //	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.0'
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.1'
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
