--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 spring:
   datasource:
 #    url: jdbc:mysql://{ec2 public IP}:3306/{DB 이름}
-#    url: jdbc:mysql://localhost:3306/dubu?allowPublicKeyRetrieval=true
-    url: jdbc:mysql://13.125.252.182:3306/dubu?useSSL=false&allow
+    url: jdbc:mariadb://localhost:3306/dubu?useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: root
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: qwer1234!@
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto:  update  # 스키마 자동 생성
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MariaDBDialect
     show-sql: true      # SQL 쿼리 출력
     properties:
       hibernate:
