--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
 #    url: jdbc:mysql://{ec2 public IP}:3306/{DB 이름}
-    url: jdbc:mariadb://localhost:3306/dubu?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mariadb://heyhey.i234.me:3307/dubu?useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: qwer1234!@
+    password: Qwer1234!@
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
